--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Relatório das redes sociais</h1>
         <nav>
-            <a href="index.html">Mundo</a>
+            <a href="index.html">Garcez</a>
             <a href="#">Minha escola</a>
         </nav>
     </header>
@@ -20,7 +20,7 @@
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por Gui Lima</p>
+        <p>3D</p>
     </footer>
 </body>
 </html>
